--- a/templates/newsletter/email/template.html
+++ b/templates/newsletter/email/template.html
@@ -126,7 +126,7 @@
                                                 <td align="center"
                                                     style="font-family: Open Sans, Helvetica, Arial, sans-serif;">
                                                     <h2 style="font-size: 20px; color: #ffffff; margin: 0; padding-bottom: 10px;">
-                                                        Article{{ top_articles.length | pluralize }} à la une</h2>
+                                                        Association{{ top_articles.length | pluralize }} à la une</h2>
                                                 </td>
                                             </tr>
                                         </table>
@@ -237,7 +237,7 @@
                                                                 bgcolor="#75b6c9">
                                                                 <a href="{% url 'newsletter-article' article.id %}"
                                                                    target="_blank"
-                                                                   style="font-size: 16px; font-family: Open Sans, Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; border-radius: 26px; background-color: #75b6c9; padding: 14px 26px; border: 1px solid #75b6c9; display: block;">En
+                                                                   style="font-size: 16px; font-family: Open Sans, Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; border-radius: 26px; background-color: #e30613; padding: 14px 26px; border: 1px solid #bd060f; display: block;">En
                                                                     savoir plus &rarr;</a>
                                                             </td>
                                                         </tr>
