--- a/templates/member/login.html
+++ b/templates/member/login.html
@@ -3,24 +3,27 @@
 {% load bootstrap %}
 
 {% block page_title %}
-  Identification
+    Identification
 {% endblock %}
 
 {% block content %}
-  <div class="row">
-    <div class="col-lg-4 col-md-3"></div>
+    <div class="row">
+        <div class="col-lg-4 col-sm-3"></div>
 
-    <div class="col-lg-4 col-md-6">
-      <form method="post" class="form-horizontal">
-        {% csrf_token %}
-        {{ form|bootstrap }}
-        <button type="submit" class="btn btn-primary btn-block">Se connecter</button>
-      </form>
+        <div class="col-lg-4 col-sm-6">
+            <form method="post">
+                {% csrf_token %}
+                {{ form|bootstrap }}
+                <button type="submit" class="btn btn-primary btn-block">Se connecter</button>
+            </form>
+            <p></p>
+            <p>
+                <a href="{% url 'member-forgot-password' %}">Mot de passe oublié ?</a>
+            </p>
 
-      <a href="{% url 'member-forgot-password' %}">Mot de passe oublié ?</a>
 
+        </div>
+
+        <div class="col-lg-4 col-md-3"></div>
     </div>
-
-    <div class="col-lg-4 col-md-3"></div>
-  </div>
 {% endblock %}
