--- a/templates/newsletter/email/_article.html
+++ b/templates/newsletter/email/_article.html
@@ -13,7 +13,7 @@
                             <tr>
                                 <td>
                                     <h3>{{ article.title }}</h3>
-                                    {% if article.type == 'FEATURED' %}
+                                    {% if article.featured_image and article.type == 'FEATURED' %}
                                         <div class="article-image">
                                             <img src="{{ article.featured_image.url }}">
                                         </div>
