Add Resource backend to Admin UI

--- a/templates/base.html
+++ b/templates/base.html
@@ -104,6 +104,9 @@
                             {% if perms.file.can_admin_file %}
                                 <li><a href="{% url 'file-list' %}">Fichiers</a></li>
                             {% endif %}
+                            {% if perms.file.can_admin_file %}
+                                <li><a href="{% url 'resource-file-list' %}">Resources</a></li>
+                            {% endif %}
                             {% if perms.utils.can_admin_place %}
                                 <li><a href="{% url 'place-list' %}">Lieux</a></li>
                             {% endif %}
