--- a/templates/file/list_resources.html
+++ b/templates/file/list_resources.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block page_title %}
-    Liste des resources
+    Liste des ressources
 {% endblock %}
 
 {% block quick_actions %}
