--- a/templates/file/resource_file_upload.html
+++ b/templates/file/resource_file_upload.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block page_sub_title %}
-  Uploader une resource
+  Uploader une ressource
 {% endblock %}
 
 {% block quick_actions %}
