--- a/templates/file/resources/folders/list.html
+++ b/templates/file/resources/folders/list.html
@@ -4,7 +4,7 @@
     {% if folder %}
         {{ folder.path }}
     {% else %}
-        Resources
+        Ressources
     {% endif %}
 {% endblock %}
 {% block content %}
