--- a/templates/association/botinsa.html
+++ b/templates/association/botinsa.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block page_title %}
-  Bot'INSA
+    Bot'INSA
 {% endblock %}
 {% block page_sub_title %}
-  Liste des associations
+    Liste des associations
 {% endblock %}
 
 {#{% block quick_actions %}#}
@@ -13,19 +13,19 @@
 {#{% endblock %}#}
 
 {% block content %}
-    <div class="row">
+    <div class="card-columns">
         {% for asso in object_list %}
 
-            <div class="col-sm-6 col-md-4">
-                <div class="thumbnail">
-                  <img src="https://portail.asso-insa-lyon.fr/file/12/" alt="...">
-                  <div class="caption">
-                    <h3>{{ asso.name }} <small>{{ asso.acronym }}</small></h3>
-                    <p>{{ asso.description }}</p>
-                    <p><a href="#" class="btn btn-primary" role="button">En savoir plus...</a></p>
-                  </div>
+            <div class="card">
+                <img class="card-img-top" src="https://portail.asso-insa-lyon.fr/file/12/" alt="...">
+                <div class="card-body">
+                    <h4 class="card-title">{{ asso.name }}
+                        <small>{{ asso.acronym }}</small>
+                    </h4>
+                    <p class="card-text">{{ asso.description }}</p>
+                    <a href="#" class="btn btn-primary" role="button">En savoir plus...</a>
                 </div>
-              </div>
+            </div>
         {% endfor %}
     </div>
 {% endblock %}
